# lucyrt

./: .clang-format  .gitignore  CMakeLists.txt  rsgen.cc
.github/workflows/: build.yml  cmake.yml
examples/: .gitignore
lucyrt/: CMakeLists.txt  main.cc
lucyrt/graphic/: CMakeLists.txt  Shader.h
src/Shaders/: blinn-phong.frag  blinn-phong.vert  fullscreen.frag  fullscreen.geom  post_unlit.frag  post_unlit.vert  skybox.vert  unlit.vert
src/Shaders/postprocessing/: unlit.frag  unlit.vert
src/Sources/: main.cc
src/Sources/graphic/: App.cc  App.h  Camera.cc  Camera.h  Component.h  Context.cc  Context.h  Framebuffer.cc  Framebuffer.h  Fullscreen.cc  Fullscreen.h  GL.h  Input.cc  Input.h  Mesh.cc  Mesh.h  Model.cc  Model.h  Program.cc  Program.h  Shader.cc  Shader.h  Skybox.cc  Skybox.h  Texture.cc  Texture.h  TransformationMatrix.cc  TransformationMatrix.h  graphic.h
src/graphic/: Component.h  Shader.h
vendors/: CMakeLists.txt
vendors/glad-3.3/include/glad/: glad.h
vendors/glad-3.3/src/: glad.c
